# Gstreamer

./: CMakeLists.txt
1_hello_world/: CMakeLists.txt  README.txt  gstreamPipeline
1_hello_world/App/concepts/: CMakeLists.txt  main.cpp
1_hello_world/App/dynamic_pipeline/: CMakeLists.txt  gstCamera.cpp  main.cpp
1_hello_world/App/multithreading/: CMakeLists.txt  README.md  main.cpp
1_hello_world/App/playback/: main.cpp
App/: README.md
App/App/: CMakeLists.txt  README.md  main.cpp
App/App_Event/: CMakeLists.txt  README.md  main.cpp
App/App_OggVorbis/: CMakeLists.txt  README.md  main.cpp  oggvorbisplayer.cpp  oggvorbisplayer.h
App/App_bin/: CMakeLists.txt  README.md  main.cpp
App/App_bus/: CMakeLists.txt  README.md  main.cpp
App/App_pad/: CMakeLists.txt  README.md  main.cpp
App/GstPipeline-Class/: CMakeLists.txt  GstPipeline.cpp  GstPipeline.h  README.md  cudaYUV-NV12.cu  gstUtility.cpp  gstUtility.h  main.cpp
App/dynamic_pipeline/: CMakeLists.txt  README.md  main.cpp
App/hello_world/: CMakeLists.txt  main.cpp  mygst.cpp  mygst.h
App/playback/: CMakeLists.txt  README.md  main.cpp
App/short-cutting/: CMakeLists.txt  main.cpp
